--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.generate-ddl=true
 server.port=80
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=khaledbaklouti23@gmail.com
+spring.mail.password=Khaled12345
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
